use recent method